--- a/public/index.html
+++ b/public/index.html
@@ -42,10 +42,52 @@
             left: 5px;
             display: block;
         }
+
+        #popup {
+            width: 200px;
+            top: 50px;
+            background-color: aqua;
+            border-radius: 2px;
+            padding: 30px;
+            position: absolute;
+            margin-left: auto;
+            margin-right: auto;
+            left: 0;
+            right: 0;
+            box-shadow: blue 0px 0px 0px 2px inset, rgb(255, 255, 255) 10px 10px 0px -3px, rgb(31, 193, 27) 10px 10px, rgb(255, 255, 255) 20px 20px 0px -3px, rgb(255, 217, 19) 20px 20px, rgb(255, 255, 255) 30px 30px 0px -3px, rgb(255, 156, 85) 30px 30px, rgb(255, 255, 255) 40px 40px 0px -3px, rgb(255, 85, 85) 40px 40px;
+            /* box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px; */
+            ;
+        }
+
+        #popup h1 {
+            font-family: 'Courier New', monospace;
+        }
+
+        #popup p {
+            font-family: Tahoma, sans-serif;
+        }
+
+        #popup button {
+            background-color: blueviolet;
+            border: 3px solid black;
+            padding: 5px 20px;
+            color: white;
+            font-size: 1rem;
+            margin-top: 20px;
+        }
     </style>
 </head>
 
 <body>
+
+    <div id="popup"">
+        <h1>Welcome to Side-Wall</h1>
+        <p>
+            Here, you can draw whatever you want. Draw together, ruin someone else's work and make something cool. You
+            can see the whole canvas <a href=" /view" rel="noreferrer noopener" target="_blank">here</a>.
+        </p>
+        <button id="close" onclick="this.parentElement.style.display = 'none'; ">Go to drawing</button>
+    </div>
 
     <main id="main"></main>
     <div id="UI">
