Popup closes with touch

--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,8 @@
             Here, you can draw whatever you want. Draw together, ruin someone else's work and make something cool. You
             can see the whole canvas <a href=" /view" rel="noreferrer noopener" target="_blank">here</a>.
         </p>
-        <button id="close" onclick="this.parentElement.style.display = 'none'; ">Go to drawing</button>
+        <button id="close" onclick="this.parentElement.style.display = 'none'; "
+            ontouchend="this.parentElement.style.display = 'none'; ">Go to drawing</button>
     </div>
 
     <main id="main"></main>
