added controls to the intro text

--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,11 @@
         <h1>Welcome to Side-Wall</h1>
         <p>
             Here, you can draw whatever you want. Draw together, ruin someone else's work and make something cool. You
-            can see the whole canvas <a href=" /view" rel="noreferrer noopener" target="_blank">here</a>.
+            can see the whole canvas <a href=" /view" rel="noreferrer noopener" target="_blank">
+        side-all.glitch.me/view</a>. <br> <br>
+        CONTROLS:<br>
+        One finger to draw.<br>
+        Two fingers to pan.<br>
         </p>
         <button id="close" onclick="this.parentElement.style.display = 'none'; "
             ontouchend="this.parentElement.style.display = 'none'; ">Go to drawing</button>
