made text in dutch

--- a/public/index.html
+++ b/public/index.html
@@ -81,14 +81,14 @@
 <body>
 
     <div id="popup"">
-        <h1>Welcome to Side-Wall</h1>
+        <h1>Welkom op Side-Wall</h1>
         <p>
-            Here, you can draw whatever you want. Draw together, ruin someone else's work and make something cool. You
-            can see the whole canvas <a href=" /view" rel="noreferrer noopener" target="_blank">
-        side-all.glitch.me/view</a>. <br> <br>
-        CONTROLS:<br>
-        One finger to draw.<br>
-        Two fingers to pan.<br>
+            Hier kan je tekenen wat je wilt. Teken samen, verpest andermans werk en maak er iets cools van. Bekijk het 
+            hele tekening op <a href=" /view" rel="noreferrer noopener" target="_blank">
+        www.side-all.glitch.me/view</a>. <br> <br>
+        BEDIENING:<br>
+        Eén vinger om te tekenen.<br>
+        Twee vingers om te scrollen.<br>
         </p>
         <button id="close" onclick="this.parentElement.style.display = 'none'; "
             ontouchend="this.parentElement.style.display = 'none'; ">Go to drawing</button>
